--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
         <!--  重要 add if package war project -->
         <!--<dependency>-->
             <!--<groupId>org.springframework.boot</groupId>-->
