--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ application.message: Hello Phil
 
 
 spring.profiles.active=dev
+
+endpoints.enabled=true
+endpoints.sensitive=false
+
+endpoints.info.enabled=true
+endpoints.actuator.enabled=true
