--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ endpoints.sensitive=false
 
 endpoints.info.enabled=true
 endpoints.actuator.enabled=true
+
+# »’÷æ≤‚ ‘
+logging.file= d:/tmp/spring-boot/app.log
+logging.level.org.springframework.boot = debug
+logging.level.org.springframework.web = info
