--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 name: test
 
-spring.mvc.view.prefix:classpath:/jsp/
+spring.mvc.view.prefix:/WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
+
 application.message: Hello Phil
 
 
