--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 name: test
 
-spring.mvc.view.prefix:/WEB-INF/jsp/
-spring.mvc.view.suffix: .jsp
+spring.mvc.view.prefix:/jsp/
+spring.mvc.view.suffix:.jsp
 
 application.message: Hello Phil
 
