--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 name: test
 
-spring.mvc.view.prefix:/jsp/
-spring.mvc.view.suffix: .jsp
+#spring.mvc.view.prefix:/jsp/
+#spring.mvc.view.suffix: .jsp
 
 application.message: Hello Phil
 
@@ -18,3 +18,4 @@ endpoints.actuator.enabled=true
 logging.file= d:/tmp/spring-boot/app.log
 logging.level.org.springframework.boot = debug
 logging.level.org.springframework.web = info
+
